# kindr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  changelog  copyright  gtesting.txt  jenkins-pipeline  kindrConfig.cmake.in  kindrConfigVersion.cmake.in  package.xml  signature_of_kindr1_library
angularvelocities/: CMakeLists.txt
angularvelocities/doc/: angularvelocities.dox
angularvelocities/test/: AngularVelocityEigenTest.cpp
cmake/: FindEigen3.cmake  FindKindr.cmake  FindROS.cmake
common/: CMakeLists.txt
doc/: CMakeLists.txt  notes_kindr_1.0.0.md
doc/cheatsheet/: IEEEtran.bst  cheatsheet.tex  cheatsheet_kindr1.tex  cheatsheet_v1.0.0.tex  references.bib
doc/cheatsheet/coordinate_systems/: coordinate_system_rpy.tex  coordinate_system_rpy_kindr1.tex  coordinate_system_ypr.tex  coordinate_system_ypr_kindr1.tex  rotation_active_passive.tex
doc/doxygen/: CMakeLists.txt  Doxyfile.remake  doxygen.config.in  mainpage.dox  page_pose.dox  page_posediff.dox  page_position.dox  page_positiondiff.dox  page_quaternion.dox  page_rotation.dox  page_rotationdiff.dox  page_vector.dox
doc/doxygen/doc/: mainpage.dox
doc/matlab/: rotations.m
doc/rm_doc/: CMakeLists.txt
include/kindr/: Core
linear_algebra/: CMakeLists.txt
linear_algebra/src/: LinearAlgebra.cpp
linear_algebra/test/: SkewMatrixFromVectorTest.cpp
linearvelocities/: CMakeLists.txt
linearvelocities/doc/: linearvelocities.dox
linearvelocities/include/kinder/linearvelocities/: LinearVelocityBase.hpp  LinearVelocityEigen.hpp
linearvelocities/test/: LinearVelocityEigenTest.cpp
matlab/core/: boxMinus.m  boxPlus.m  getAngleAxisFromRotationMatrix.m  getEulAngXYZFromRotationMatrix.m  getEulAngZXZFromRotationMatrix.m  getEulAngZYXFromRotationMatrix.m  getEulAngZYZFromRotationMatrix.m  getMapEulAngZXZDiffToAngVelInWorldFrame.m  getMapEulAngZYXDDiffToAngAccInBaseFrame.m  getMapEulAngZYXDDiffToAngAccInWorldFrame.m  getMapEulAngZYXDiffToAngVelInBaseFrame.m  getMapEulAngZYXDiffToAngVelInWorldFrame.m  getMapEulAngZYZDiffToAngVelInWorldFrame.m  getRotationMatrixX.m  getRotationMatrixY.m  getRotationMatrixZ.m  getTimeDerivative.m  isRotationMatrix.m  mapAngleAxisToQuaternion.m  mapEulerAnglesXYZToRotationMatrix.m  mapEulerAnglesZXZToRotationMatrix.m  mapEulerAnglesZYXToRotationMatrix.m  mapEulerAnglesZYZToRotationMatrix.m  mapQuaternionToRotationMatrix.m  mapRotationMatrixToQuaternion.m  mapRotationMatrixToRotationVector.m  mapRotationQuaternionToRotationVector.m  mapRotationVectorToRotationMatrix.m  rotateVectorUsingQuaternion.m  skew.m  unskew.m
matlab/finite_differences/: linearizationExample.m  numerical_jacobian.m
matlab/utils/: dMATdt.m  fulldMATdt.m
matlab/visualization/: addLabelToVector.m  animateAngularVelocityUsingEulerZYX.m  animateAngularVelocityUsingExpMap.m  animateLinearVelocity.m  visualizeCoordinateSystem.m  visualizeHomogeneousTransform.m  visualizeLinearization.m  visualizeRotationFromAngleAxis.m  visualizeRotationFromRotationVector.m
poses/: CMakeLists.txt
poses/doc/: poses.dox
poses/test/: PoseEigenTest.cpp
positions/: CMakeLists.txt
positions/doc/: pdiff.dox  positions.dox
positions/test/: PDiffEigenTest.cpp  PositionDiffEigenTest.cpp  PositionEigenTest.cpp
quaternions/: CMakeLists.txt
quaternions/doc/: quaternions.dox
quaternions/test/: QuaternionEigenTest.cpp
rm_doc/: CMakeLists.txt
rm_doc/doc/: .gitignore  doxygen.config.in  mainpage.dox
rm_linear_algebra/: CMakeLists.txt
rm_linear_algebra/include/rm/linear_algebra/: LinearAlgebra.hpp
rm_linear_algebra/src/: LinearAlgebra.cpp
rm_linear_algebra/test/: SkewMatrixFromVectorTest.cpp
rm_quaternions/: CMakeLists.txt
rm_quaternions/doc/: quaternions.dox
rm_quaternions/include/rm/quaternions/: QuaternionBase.hpp  QuaternionEigen.hpp
rm_quaternions/test/: QuaternionEigenTest.cpp  QuaternionsTest.cpp  test_main.cpp
rm_rotations/: CMakeLists.txt
rm_rotations/doc/: rotations.dox
rm_rotations/include/rm/rotations/: QuaternionBase.hpp  QuaternionEigen.hpp  RotationBase.hpp  RotationEigen.hpp  RotationEigenFunctions.hpp  Rotations.hpp
rm_rotations/src/: example.cpp
rm_rotations/test/: QuaternionsTest.cpp  RotationEigenTest.cpp  RotationsOld.hpp  RotationsTest.cpp  SimulationSubfunctions.cpp  SimulationSubfunctions.hpp  test_main.cpp
rm_rotations/test/toDelete/: QuaternionsTest.cpp
rotations/: CMakeLists.txt
rotations/doc/: rdiff.dox  rotations.dox
rotations/src/: example.cpp
rotations/test/: RDiffEigenTest.cpp  RotationDiffEigenTest.cpp  RotationEigenTest.cpp
src/: CMakeLists.txt  kindr_impl.cpp
src/include/: CMakeLists.txt
test/: CMakeLists.txt  run_tests.py
test/common/: CommonTest.cpp
test/core/: FunctionalTest.cpp  SE3Test.cpp
test/linear_algebra/: PseudoInverseTest.cpp  SkewMatrixFromVectorTest.cpp
test/phys_quant/: ForceTest.cpp  ScalarTest.cpp  WrenchTest.cpp
test/poses/: HomogeneousTransformationTest.cpp  PoseDiffEigenTest.cpp  PoseDiffTest.cpp  PoseEigenTest.cpp  PoseTest.cpp  PositionDiffTest.cpp  PositionTest.cpp  TwistWithAngularVelocityTest.cpp
test/positions/: PositionDiffEigenTest.cpp  PositionEigenTest.cpp
test/quaternions/: QuaternionEigenTest.cpp  QuaternionTest.cpp
test/rotations/: AngleAxisTest.cpp  ConventionTest.cpp  EulerAnglesXyzDiffTest.cpp  EulerAnglesXyzTest.cpp  EulerAnglesZyxDiffTest.cpp  EulerAnglesZyxTest.cpp  GlobalAngularVelocityTest.cpp  LocalAngularVelocityTest.cpp  RotationDiffEigenTest.cpp  RotationDiffTest.cpp  RotationEigenTest.cpp  RotationMatrixDiffTest.cpp  RotationMatrixTest.cpp  RotationQuaternionDiffTest.cpp  RotationQuaternionTest.cpp  RotationTest.cpp  RotationVectorTest.cpp
test/rotations/eigen/: AngleAxisDiffTest.cpp  AngleAxisTest.cpp  EulerAnglesXyzDiffTest.cpp  EulerAnglesXyzTest.cpp  EulerAnglesZyxDiffTest.cpp  EulerAnglesZyxTest.cpp  LocalAngularVelocityTest.cpp  RotationMatrixDiffTest.cpp  RotationMatrixTest.cpp  RotationQuaternionDiffTest.cpp  RotationQuaternionTest.cpp  RotationVectorDiffTest.cpp  RotationVectorTest.cpp
test/vector/: VectorTest.cpp
test/vectors/: VectorsTest.cpp
(+205 files in other folders)
