<?xml version="1.0"?>

<package format="2">

  <name>kindr</name>
  <version>1.3.0</version>
  <description>
    Kinematics and Dynamics for Robotics
  </description>

  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/kindr</url>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <author>Michael Bloesch</author>
  <author>Remo Diethelm</author>
  <author>Péter Fankhauser</author>
  <author>Paul Furgale</author>
  <author>Christian Gehring</author>
  <author>Hannes Sommer</author>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>
  <exec_depend>catkin</exec_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>texlive-latex-base</doc_depend>

  <export>
    <!-- Specify that this is not really a ROS package-->
    <build_type>cmake</build_type>
  </export>

</package>
